; ModuleID = '/home/carl/AnghaBench/wrk/src/extr_wrk.c_socket_connected.c'
source_filename = "/home/carl/AnghaBench/wrk/src/extr_wrk.c_socket_connected.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 (%struct.TYPE_10__*, i32)* }
%struct.TYPE_10__ = type { %struct.TYPE_12__*, i64, i32 }
%struct.TYPE_12__ = type { %struct.TYPE_9__, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_13__ = type { i32 }

@sock = common dso_local global %struct.TYPE_11__ zeroinitializer, align 8
@cfg = common dso_local global %struct.TYPE_13__ zeroinitializer, align 4
@HTTP_RESPONSE = common dso_local global i32 0, align 4
@AE_READABLE = common dso_local global i32 0, align 4
@socket_readable = common dso_local global i32 0, align 4
@AE_WRITABLE = common dso_local global i32 0, align 4
@socket_writeable = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i8*, i32)* @socket_connected to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @socket_connected(i32* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_10__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_10__*
  store %struct.TYPE_10__* %11, %struct.TYPE_10__** %9, align 8
  %12 = load i32 (%struct.TYPE_10__*, i32)*, i32 (%struct.TYPE_10__*, i32)** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @sock, i32 0, i32 0), align 8
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_13__, %struct.TYPE_13__* @cfg, i32 0, i32 0), align 4
  %15 = call i32 %12(%struct.TYPE_10__* %13, i32 %14)
  switch i32 %15, label %19 [
    i32 129, label %16
    i32 130, label %17
    i32 128, label %18
  ]

16:                                               ; preds = %4
  br label %19

17:                                               ; preds = %4
  br label %46

18:                                               ; preds = %4
  br label %59

19:                                               ; preds = %4, %16
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %21 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %20, i32 0, i32 2
  %22 = load i32, i32* @HTTP_RESPONSE, align 4
  %23 = call i32 @http_parser_init(i32* %21, i32 %22)
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 1
  store i64 0, i64* %25, align 8
  %26 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %27 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_12__*, %struct.TYPE_12__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* @AE_READABLE, align 4
  %33 = load i32, i32* @socket_readable, align 4
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %35 = call i32 @aeCreateFileEvent(i32 %30, i32 %31, i32 %32, i32 %33, %struct.TYPE_10__* %34)
  %36 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 0
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = load i32, i32* %6, align 4
  %42 = load i32, i32* @AE_WRITABLE, align 4
  %43 = load i32, i32* @socket_writeable, align 4
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %45 = call i32 @aeCreateFileEvent(i32 %40, i32 %41, i32 %42, i32 %43, %struct.TYPE_10__* %44)
  br label %59

46:                                               ; preds = %17
  %47 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %48 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %47, i32 0, i32 0
  %49 = load %struct.TYPE_12__*, %struct.TYPE_12__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %51, align 4
  %54 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %55 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %54, i32 0, i32 0
  %56 = load %struct.TYPE_12__*, %struct.TYPE_12__** %55, align 8
  %57 = load %struct.TYPE_10__*, %struct.TYPE_10__** %9, align 8
  %58 = call i32 @reconnect_socket(%struct.TYPE_12__* %56, %struct.TYPE_10__* %57)
  br label %59

59:                                               ; preds = %46, %19, %18
  ret void
}

declare dso_local i32 @http_parser_init(i32*, i32) #1

declare dso_local i32 @aeCreateFileEvent(i32, i32, i32, i32, %struct.TYPE_10__*) #1

declare dso_local i32 @reconnect_socket(%struct.TYPE_12__*, %struct.TYPE_10__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
